--- a/src/main/resources/static/css/baseCss.css
+++ b/src/main/resources/static/css/baseCss.css
@@ -1,6 +1,6 @@
 body {
     min-height: 100vh;
-    height: 100%;
+    /*height: 100%;*/
     /*height: -webkit-fill-available;*/
     background-image: url("/image/background.jpg");
     background-size: cover;
@@ -15,6 +15,7 @@ html {
 .sidebar {
     display: flex;
     flex-wrap: nowrap;
+    min-height: 100vh;
     height: 100%;
     overflow-x: hidden;
 }
